Add & finish Login page UI

--- a/views/login.html
+++ b/views/login.html
@@ -8,11 +8,17 @@
         type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Besley&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Login page to play Memory Game">
 </head>
 
 <body>
     <script src="js/scripts.js" defer></script>
     <link href="css/style.css" rel="stylesheet">
-    <h1>Welcome!</h1>
+    <h1>Welcome to Memory Game!</h1>
+    <div id='loginForm'>
+        <h2>Login</h2>
+        <button id="gitBtn">Sign in with GitHub</button>
+    </div>
 </body>
 </html>
