--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,1 +1,47 @@
+body {
+    background-image: url("https://wallpaperaccess.com/full/3720574.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+}
 
+h1, h2 {
+    font-family: 'Besley', sans-serif;
+    text-align: center;
+}
+
+h1 {
+    color: white;
+}
+
+h2 {
+    padding-top: 10px;
+}
+
+button {
+    font-family: 'Rubik', sans-serif;
+    font-size: 18px;
+    border: none;
+    background-color: #8CDAFF;
+    border-radius: 50px;
+    width: 140px;
+    height: 50px;
+ }
+
+ button:hover {
+    background-color:#63B1FF;
+}
+
+ #gitBtn {
+     margin-top: 20px;
+     margin-left: 180px;
+ }
+
+#loginForm {
+    height: 200px;
+    width: 500px;
+    background-color: #EEDCFC;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
