--- a/views/login.html
+++ b/views/login.html
@@ -4,10 +4,11 @@
 <head>
     <title>Memory Game</title>
     <meta charset="utf-8" />
-    <link rel="icon" href=https://cdn2.bulbagarden.net/upload/thumb/1/1f/831Wooloo.png/1200px-831Wooloo.png
+    <link rel="icon" href=https://cdn3.iconfinder.com/data/icons/retro-tech/60/Retro_Tech_-_Flat_-_054_-_Simon_Says-512.png
         type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Besley&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Login page to play Memory Game">
 </head>
