Fix/Remove extra overlays and buttons

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -65,9 +65,8 @@ button {
     margin-right: auto;
 }
 
-#host {
-    margin-left: 95px;
-    margin-right: 15px;
+#play {
+    margin-left: 180px;
 }
 
 .overlay {
