Add Leaderboard button and table setup

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -29,6 +29,20 @@ p {
     padding-right: 15px;
 }
 
+table {
+    display: flexbox;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+}
+
+th {
+    font-family: 'Besley', sans-serif;
+    background-color: #77DBDA;
+    padding: 10px 70px;
+    font-weight: unset;
+}
+
 button {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
@@ -58,40 +72,18 @@ button {
 }
 
 #instructionOverlay {
-    height: 600px;
+    height: 550px;
     width: 500px;
     background-color: #EEDCFC;
     margin-left: auto;
     margin-right: auto;
-}
-
-#play {
-    margin-left: 180px;
 }
 
 .overlay {
     display: block;
 }
 
-.content {
-    height: 215px;
-    width: 500px;
-    background-color: #EEDCFC;
-    margin-top: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-
-.contentText {
-    height: 40px;
-    width: 250px;
-    font-size: 20px;
-    border: none;
-    outline: none;
-    margin-bottom: 25px;
-}
-
-.back {
-    margin-right: 50px;
+#leaderboard {
+    margin-left: 95px;
+    margin-right: 15px;
 }
