--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -43,6 +43,12 @@ th {
     font-weight: unset;
 }
 
+td {
+    padding: 10px 75px;
+    font-family: 'Besley', sans-serif;
+    background-color: #89DACD;
+}
+
 button {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
