--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -61,6 +61,7 @@ button {
 
  button:hover {
     background-color:#63B1FF;
+    cursor: pointer;
 }
 
  #gitBtn {
@@ -116,6 +117,10 @@ button {
     height: 200px;
     width: 200px;
   }
+
+.colorTile.clickable {
+    cursor: pointer;
+}
   
 .tileContainer {
     display: flex;
